obake/tests/ui/no_version.rs
#[obake::versioned]
struct Foo {}

#[obake::versioned]
enum Bar {}

fn main() {}
